--- a/res/layout/activity_retreat.xml
+++ b/res/layout/activity_retreat.xml
@@ -44,7 +44,7 @@
         android:id="@+id/tv_clear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:paddingLeft="20dp"
         android:drawableLeft="@drawable/retreat_clear"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
@@ -65,7 +65,7 @@
         android:id="@+id/tv_editpass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:paddingLeft="20dp"
         android:drawableLeft="@drawable/retreat_editpassword"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
@@ -86,7 +86,7 @@
         android:id="@+id/tv_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:paddingLeft="20dp"
         android:drawableLeft="@drawable/retreat_logout"
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
