--- a/res/layout/activity_projectdetial.xml
+++ b/res/layout/activity_projectdetial.xml
@@ -20,7 +20,7 @@
             android:drawableLeft="@drawable/ic_landinfo_l"
             android:drawablePadding="@dimen/pro_margindrapadding"
             android:gravity="center_vertical"
-            android:text="土地信息" />
+            android:text="土地信息阶段" />
 
         <TextView
             android:layout_centerVertical="true"
@@ -34,7 +34,7 @@
             android:text="土地规划/拍卖" />
     </RelativeLayout>
 
-    <ScrollView
+    <com.zhongji.collection.widget.XScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
@@ -45,6 +45,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical" >
         </LinearLayout>
-    </ScrollView>
+    </com.zhongji.collection.widget.XScrollView>
 
 </LinearLayout>
