--- a/res/layout/activity_seach_result.xml
+++ b/res/layout/activity_seach_result.xml
@@ -3,16 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-<ListView
-        android:paddingBottom="@dimen/pro_item_pall"
+
+    <com.zhongji.collection.widget.RTPullListView
+        android:id="@+id/lv_seach_result"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/gray_proall_bg"
         android:divider="@color/gray_proall_bg"
         android:dividerHeight="10dp"
         android:listSelector="@android:color/transparent"
-        android:background="@color/gray_proall_bg"
-        android:id="@+id/lv_seach_result"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
-    
+        android:paddingBottom="@dimen/pro_item_pall" >
+    </com.zhongji.collection.widget.RTPullListView>
+
 </LinearLayout>
