--- a/res/layout/listview_headview.xml
+++ b/res/layout/listview_headview.xml
@@ -25,7 +25,8 @@
             android:src="@drawable/listview_zhongji" />
 
         <FrameLayout
-            android:layout_below="@+id/imageView1"
+            android:layout_alignTop="@+id/layout_progressBar"
+            android:layout_alignBottom="@+id/layout_progressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -54,6 +55,7 @@
         <!-- 提示、最近更新 -->
 
         <LinearLayout
+            android:id="@+id/layout_progressBar"
             android:layout_below="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
