--- a/res/layout/view_detial_title.xml
+++ b/res/layout/view_detial_title.xml
@@ -17,7 +17,7 @@
         android:id="@+id/tv_detial_stagechildname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text=""
         android:textColor="@color/blue_pro_txt"
         android:textSize="@dimen/activity_16_size" />
 
@@ -31,7 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/pro_detial_marg10"
-        android:text="TextView"
+        android:text=""
         android:textSize="@dimen/activity_18_size" />
 
     <TextView
@@ -39,13 +39,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/pro_detial_marg10"
-        android:text="TextView" />
+        android:text="" />
 
     <TextView
         android:id="@+id/tv_detial_address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text=""
         android:textColor="@color/gray_detial_txt" />
 
 </LinearLayout>
