--- a/res/layout/view_landplan_detial.xml
+++ b/res/layout/view_landplan_detial.xml
@@ -4,16 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <include layout="@layout/view_detial_title"/>
+    <include
+        layout="@layout/view_detial_title" />
 
-    <include layout="@layout/view_detial_imgs"/>
+    <include
+        layout="@layout/view_detial_imgs" />
 
     <LinearLayout
-        android:layout_marginTop="@dimen/pro_detial_marg10"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/pro_detial_marg10"
         android:layout_marginRight="@dimen/pro_detial_marg10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_marginTop="@dimen/pro_detial_marg10" >
 
         <LinearLayout
             android:layout_width="0dp"
@@ -30,18 +32,18 @@
                 android:textSize="@dimen/activity_16_size" />
 
             <TextView
-                android:textColor="@color/gray_detial_txt"
                 android:id="@+id/tv_landarea"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text=""
+                android:textColor="@color/gray_detial_txt" />
         </LinearLayout>
 
         <LinearLayout
-            android:gravity="center_horizontal"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:orientation="vertical" >
 
             <TextView
@@ -53,20 +55,20 @@
                 android:textSize="@dimen/activity_16_size" />
 
             <TextView
-                android:textColor="@color/gray_detial_txt"
                 android:id="@+id/tv_plotRatio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text=""
+                android:textColor="@color/gray_detial_txt" />
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="@dimen/pro_detial_marg10"
-        android:layout_marginLeft="@dimen/pro_detial_marg10"
-        android:layout_marginRight="@dimen/pro_detial_marg10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/pro_detial_marg10"
+        android:layout_marginRight="@dimen/pro_detial_marg10"
+        android:layout_marginTop="@dimen/pro_detial_marg10"
         android:orientation="horizontal" >
 
         <LinearLayout
@@ -84,30 +86,27 @@
                 android:textSize="@dimen/activity_16_size" />
 
             <TextView
-                android:textColor="@color/gray_detial_txt"
                 android:id="@+id/tv_usage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView" />
+                android:text=""
+                android:textColor="@color/gray_detial_txt" />
         </LinearLayout>
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_weight="1" />
-        
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/layout_contacts"
-        android:layout_marginTop="@dimen/pro_detial_marg10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/pro_detial_marg10"
         android:orientation="vertical" >
-        
-        <include layout="@layout/view_detial_contact"/>
-        <include layout="@layout/view_detial_contact"/>
-        <include layout="@layout/view_detial_contact"/>
+
+        <include layout="@layout/view_detial_contact" />
     </LinearLayout>
 
 </LinearLayout>
