--- a/res/layout/view_projectdetails_stage.xml
+++ b/res/layout/view_projectdetails_stage.xml
@@ -7,11 +7,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical" > 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="wrap_content" 
             android:padding="@dimen/prostage_marginall" >
 
             <ImageView
@@ -21,47 +21,37 @@
                 android:layout_weight="1"
                 android:src="@drawable/pro_details_stage_message" />
 
-            <TextView
+            <TextView 
                 android:id="@+id/textView1"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="match_parent" 
                 android:layout_weight="9"
                 android:gravity="center_vertical"
                 android:text="土地信息阶段"
-                android:textColor="@color/black"
-               />
-           
-            
+                android:textColor="@color/black" />
         </LinearLayout>
-      
-        <LinearLayout 
-            
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-          
-          
-           <View
-          android:layout_width="0dp"
-          android:layout_height="2dp"
-          android:layout_weight="1" />  
-         
-         <View
-		  android:layout_width="0dp"
-		  android:layout_height="1dp"
-          android:background="@color/black"
-          android:layout_weight="7" />
-            
-            
-        </LinearLayout>
-        
-        
 
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_weight="1" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="7"
+                android:background="@color/black" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="0" >
 
@@ -83,21 +73,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-            
+                android:visibility="invisible" />
+
             <ImageView
                 android:id="@+id/iv_1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="1" >
 
@@ -119,16 +109,15 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-            
+                android:visibility="invisible" />
+
             <ImageView
                 android:id="@+id/iv_3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
-            
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
@@ -149,38 +138,30 @@
                 android:layout_height="match_parent"
                 android:layout_weight="9"
                 android:gravity="center_vertical"
-                android:text="主体设计阶段"
-                />
+                android:text="主体设计阶段" />
         </LinearLayout>
 
-       
-        <LinearLayout 
-            
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-          
-          
-           <View
-          android:layout_width="0dp"
-          android:layout_height="2dp"
-          android:layout_weight="1" />  
-         
-         <View
-		  android:layout_width="0dp"
-		  android:layout_height="1dp"
-          android:background="@color/black"
-          android:layout_weight="7" />
-            
-            
-        </LinearLayout>
-        
-        
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_weight="1" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="7"
+                android:background="@color/black" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="2" >
 
@@ -202,22 +183,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-            
+                android:visibility="invisible" />
+
             <ImageView
                 android:id="@+id/iv_5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
-            
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="3" >
 
@@ -239,21 +219,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-            
-              <ImageView
+                android:visibility="invisible" />
+
+            <ImageView
                 android:id="@+id/iv_7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="4" >
 
@@ -268,22 +248,22 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
                 android:text="出图阶段" />
-    
+
             <ImageView
                 android:id="@+id/iv_8"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-            
-              <ImageView
+                android:visibility="invisible" />
+
+            <ImageView
                 android:id="@+id/iv_9"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
@@ -304,38 +284,30 @@
                 android:layout_height="match_parent"
                 android:layout_weight="9"
                 android:gravity="center_vertical"
-                android:text="主体施工阶段"
-                />
+                android:text="主体施工阶段" />
         </LinearLayout>
-        
-       
-        <LinearLayout 
-            
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-          
-          
-           <View
-          android:layout_width="0dp"
-          android:layout_height="2dp"
-          android:layout_weight="1" />  
-         
-         <View
-		  android:layout_width="0dp"
-		  android:layout_height="1dp"
-          android:background="@color/black"
-          android:layout_weight="7" />
-            
-            
-        </LinearLayout>
-        
-       
+
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_weight="1" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="7"
+                android:background="@color/black" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="5" >
 
@@ -351,29 +323,27 @@
                 android:layout_weight="7"
                 android:text="地平" />
 
-           <ImageView
+            <ImageView
                 android:id="@+id/iv_10"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-           
-             <ImageView
+                android:visibility="invisible" />
+
+            <ImageView
                 android:id="@+id/iv_11"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
-            
-            
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="6" >
 
@@ -389,27 +359,27 @@
                 android:layout_weight="7"
                 android:text="桩基基坑" />
 
-             <ImageView
+            <ImageView
                 android:id="@+id/iv_12"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-             
-               <ImageView
+                android:visibility="invisible" />
+
+            <ImageView
                 android:id="@+id/iv_13"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="7" >
 
@@ -431,21 +401,21 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-            
-              <ImageView
+                android:visibility="invisible" />
+
+            <ImageView
                 android:id="@+id/iv_15"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="8" >
 
@@ -461,21 +431,21 @@
                 android:layout_weight="7"
                 android:text="消防/景观绿化" />
 
-             <ImageView
+            <ImageView
                 android:id="@+id/iv_16"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_photo"
-                android:visibility="gone" />
-             
-               <ImageView
+                android:visibility="invisible" />
+
+            <ImageView
                 android:id="@+id/iv_17"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/project_details_users"
-                android:visibility="gone" />
+                android:visibility="invisible" />
         </LinearLayout>
 
         <LinearLayout
@@ -496,48 +466,74 @@
                 android:layout_height="match_parent"
                 android:layout_weight="9"
                 android:gravity="center_vertical"
-                android:text="装修阶段"
-                />
+                android:text="装修阶段" />
         </LinearLayout>
 
-        
-        <LinearLayout 
-            
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-          
-          
-           <View
-          android:layout_width="0dp"
-          android:layout_height="2dp"
-          android:layout_weight="1" />  
-         
-         <View
-		  android:layout_width="0dp"
-		  android:layout_height="1dp"
-          android:background="@color/black"
-          android:layout_weight="7" />
-            
-            
+            android:orientation="horizontal" >
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_weight="1" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="7"
+                android:background="@color/black" />
         </LinearLayout>
         
-        
         <LinearLayout
-            android:onClick="onClick"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onClick"
             android:padding="@dimen/prostage_marginall"
             android:tag="9" >
 
-           <ImageView 
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:id="@+id/pro_detalis_stage_result"
-               android:src="@drawable/pro_detalis_stage_result"/>
-            
-            
+            <View
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="7"
+                android:text="装修阶段" />
+
+            <ImageView
+                android:id="@+id/iv_18"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/project_details_photo"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/iv_19"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/project_details_users"
+                android:visibility="invisible" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:padding="@dimen/prostage_marginall"
+            android:tag="10" >
+
+            <ImageView
+                android:id="@+id/pro_detalis_stage_result"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/pro_detalis_stage_result" />
         </LinearLayout>
     </LinearLayout>
 
