--- a/res/layout/view_design.xml
+++ b/res/layout/view_design.xml
@@ -53,7 +53,7 @@
                 <LinearLayout
                     android:id="@+id/layout_contacts"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
+                    android:layout_height="match_parent" >
                 </LinearLayout>
             </LinearLayout>
 
