--- a/res/layout/activity_searchpro.xml
+++ b/res/layout/activity_searchpro.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhongji.collection.widget.KeyboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/keyboardLayout1"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical" >
 
+    <com.zhongji.collection.widget.KeyboardLayout
+        android:id="@+id/keyboardLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical" >
+    </com.zhongji.collection.widget.KeyboardLayout>
+
     <com.zhongji.collection.widget.RTPullListView
-        android:divider="@color/gray_proall_bg"
-        android:dividerHeight="1dp"
-        android:listSelector="@android:color/transparent"
         android:id="@+id/lv_seachpro_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@color/gray_proall_bg"
+        android:dividerHeight="1dp"
+        android:listSelector="@android:color/transparent"
         android:paddingBottom="@dimen/pro_item_pall" >
-        
     </com.zhongji.collection.widget.RTPullListView>
 
     <LinearLayout
@@ -69,4 +75,4 @@
             android:src="@drawable/seach_map_button" />
     </LinearLayout>
 
-</com.zhongji.collection.widget.KeyboardLayout>
+</RelativeLayout>
