--- a/res/layout/view_detial_title.xml
+++ b/res/layout/view_detial_title.xml
@@ -15,7 +15,7 @@
 
     <TextView
         android:id="@+id/tv_detial_stagechildname"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
         android:textColor="@color/blue_pro_txt"
